--- a/style.css
+++ b/style.css
@@ -23,6 +23,19 @@
 
 }
 
+.shadow {
+    contain: '';
+    position: absolute;
+    bottom: 208px;
+    left: 131px;
+    background: rgba(0, 0, 0, 0.352);
+    width: 100px;
+    height: 24px;
+    border-radius: 50%;
+    animation: shadow-size 1s infinite alternate ease;
+
+}
+
 .ball1 {
     background-image: url(img/ball01.png);
     position: absolute;
@@ -33,7 +46,7 @@
     height: 120px;
     background-repeat: no-repeat;
     background-size: contain;
-    animation: ball-1 1s infinite alternate  ease-in ;
+    animation: ball-1 1s infinite alternate ease-in;
 }
 
 .ball2 {
@@ -47,6 +60,23 @@
     width: 75px;
     height: 75px;
     animation: ball-2 5s infinite ease-in-out;
+
+}
+
+@keyframes shadow-size {
+    0% {
+        transform: scale(.5);
+    }
+
+    50%{
+        background: rgba(0, 0, 0, 0.5);
+
+    }
+    100% {
+
+        transform: scale(1);
+        background: rgba(0, 0, 0, 0.59);
+    }
 
 }
 
@@ -67,7 +97,8 @@
         left: 200px;
         transform: rotate(0deg);
     }
-    50%{
+
+    50% {
         left: 456px;
         transform: rotate(360deg);
     }
